[package]
name = "c-ward"
version = "0.15.3"
authors = [
    "Dan Gohman <dev@sunfishcode.online>",
]
description = "An implementation of libc written in Rust"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
repository = "https://github.com/sunfishcode/c-ward"
edition = "2021"
exclude = ["/.github"]
publish = false

[dev-dependencies]
assert_cmd = "2.0.12"
libc = "0.2.147"

[workspace]
members = [
  "c-scape",
  "c-gull",
]
