[package]
name = "c-ward"
version = "0.16.1"
authors = [
    "Dan Gohman <dev@sunfishcode.online>",
]
description = "An implementation of libc written in Rust"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
repository = "https://github.com/sunfishcode/c-ward"
edition = "2021"
exclude = ["/.github", "ci"]
publish = false

[dev-dependencies]
assert_cmd = "2.0.12"
libc = "0.2.155"

[workspace]
members = [
  "c-scape",
  "c-gull",
]

# TODO: Remove this workaround when
# https://github.com/llvm/llvm-project/pull/105513
# makes it into the Rust compiler.
[profile.dev.package.unwinding]
debug = false
