[package]
name = "eyra"
version = "0.14.3"
authors = [
    "Dan Gohman <dev@sunfishcode.online>",
]
description = "Rust programs written entirely in Rust"
documentation = "https://docs.rs/eyra"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
repository = "https://github.com/sunfishcode/c-ward"
edition = "2021"
keywords = ["linux"]

[dependencies]
libc = { path = "../c-gull", version = "0.14.3", default-features = false, features = ["eyra"], package = "c-gull" }

[features]
default = []

# Enable logging of program and thread startup and shutdown.
log = ["libc/log"]

# Install the `env_logger` crate as a logger.
env_logger = ["libc/env_logger"]

# Enable highly experimental support for performing startup-time relocations,
# needed to support statically-linked PIE executables.
experimental-relocate = ["libc/experimental-relocate"]
