[package]
name = "c-gull-lto"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies.libc]
path = "../../c-gull"
default-features = false
features = [
    "take-charge",
    "std",
    "thread",
    "call-main",
    "malloc-via-crates",
    "define-mem-functions",
]
package = "c-gull"

# Enable LTO.
[profile.release]
lto = true

# This is just an example crate, and not part of the c-ward workspace.
[workspace]
