[package]
name = "c-scape-example"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies.libc]
path = "../../c-scape"
# Disable the default features, and enable "take-charge" mode.
default-features = false
features = [
    "take-charge",
    "thread",
    "call-main",
    "malloc-via-rust-global-alloc",
    "define-mem-functions",
    "threadsafe-setenv",
]
package = "c-scape"

[dependencies]
errno = { version = "0.3.3", default-features = false }
rustix-dlmalloc = { version = "0.1.0", features = ["global"] }

# This is just an example crate, and not part of the c-ward workspace.
[workspace]
