[package]
name = "dns"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies.libc]
path = "../../c-gull"
default-features = false
features = [
    "take-charge",
    "std",
    "thread",
    "call-main",
    "malloc-via-crates",
    "define-mem-functions",
]
package = "c-gull"

# This is just an example crate, and not part of the c-ward workspace.
[workspace]

# TODO: Remove this workaround when
# https://github.com/llvm/llvm-project/pull/105513
# makes it into the Rust compiler.
[profile.dev.package.unwinding]
debug = false
